--- a/YNhiD3/index.html
+++ b/YNhiD3/index.html
@@ -76,8 +76,8 @@
         <div class="question-list">
             <h2>Lựa chọn biểu đồ trực quan:</h2>
             <ul>
-                <li><a href="YenNhi1.html">1. Top 5 thành phố xảy ra nhiều vụ tai nạn nhất</a></li>
-                <li><a href="YenNhi2.html">2. Biểu đồ Thống kê Số Lượng Tác Phẩm theo Loại Hình Nghệ Thuật</a></li>
+                <li><a href="YenNhi1.html">1. Thống kê số lượng tác phẩm theo loại hình nghệ thuật</a></li>
+                <li><a href="YenNhi2.html">2. Báo cáo số lượng vụ tai nạn theo từng tháng của mỗi năm</a></li>
             </ul>
         </div>
     </div>
