--- a/YNhiD3/YenNhi1.html
+++ b/YNhiD3/YenNhi1.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traffic_Accidents</title>
+    <title>Biểu đồ Thống kê Số Lượng Tác Phẩm theo Loại Nghệ Thuật</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
         #chart-container {
@@ -44,100 +43,115 @@
         }
     </style>
 </head>
-
 <body>
-    <h1 style="text-align: center;">Top 5 thành phố xảy ra nhiều vụ tai nạn nhất</h1>
-    <div id="chart-container">
+    <div style="margin-left: 50px;">
+        <h3">Câu hỏi 7: </h3>
+            <div style="margin-left: 30px;">
+                <h3><b>Yêu cầu:</b> Thống kê số lượng tác phẩm theo loại hình nghệ thuật
+                </h3>
+                <h3>Thiết kế biểu đồ:</h3>
+            </div>
+            <div style="margin-left: 50px;">
+                <p">Ở trong yêu cầu này, sử dụng thuộc tính Type để tính số lượng tác phẩm theo loại thuộc tính
+                    </p>
+                    <p">Ta sẽ sử dụng các kênh sau</p>
+                        <p">- Vị trí theo chiều dọc: Thuộc tính số lượng tác phẩm nghệ thuật</p>
+                            <p">- Vị trí theo chiều ngang: Thuộc tính loại nghệ thuật</p>
+            </div>
     </div>
-
-    <div class="comment-container">
-        <p class="comment-text">
-            <span class="bold-text">PHÂN TÍCH BIỂU ĐỒ:</span> <br>
-            • Biểu đồ trực quan hóa Top 5 thành phố có nhiều vụ tai nạn giao thông nhất <br>
-            • Nó cung cấp thông tin rõ ràng về tần suất xảy ra tai nạn ở các thành phố từ đó giúp đánh giá mức độ an toàn giao thông tại các khu vực này <br>
-            • Quan sát biểu đồ ta có thể thấy rằng Thành phố X là thành phố xảy ra nhiều vụ tai nạn nhất
-        </p>
+    <h1 style="text-align: center;">Biểu đồ Thống kê Số Lượng Tác Phẩm theo Loại Hình Nghệ Thuật</h1>    <div id="chart"></div>
+    <div style="margin-left: 80px;">
+        <h3>Đánh giá biểu đồ:</h3>
+        <div style="margin-left: 20px;">
+            <p>Biểu đồ giúp phân tích và so sánh số lượng tác phẩm của mỗi loại hình nghệ thuật
+            </p>
+            <p>Thông qua biểu đồ, có thể nhận biết được loại hình nghệ thuật nào có số lượng tác phẩm nhiều nhất và ít nhất</p>
+        </div>
     </div>
-
     <script>
-    
-        d3.csv("Traffic_Accidents.csv").then(function (data) {
-            var accidentCounts = {};
-            data.forEach(function (d) {
-                var city = d.City;
-                if (!accidentCounts[city]) {
-                    accidentCounts[city] = 0;
+        d3.csv("Art_in_Public_Places.csv").then(function(data) {
+            // Tạo đối tượng để lưu trữ số lượng tác phẩm của mỗi loại nghệ thuật
+            var typeCounts = {};
+
+            // Lặp qua dữ liệu và tính số lượng tác phẩm của mỗi loại nghệ thuật
+            data.forEach(function(d) {
+                var type = d.Type;
+                if (!typeCounts[type]) {
+                    typeCounts[type] = 0;
                 }
-                accidentCounts[city]++;
+                typeCounts[type]++;
             });
 
-            var topCities = Object.keys(accidentCounts).sort(function (a, b) {
-                return accidentCounts[b] - accidentCounts[a];
-            }).slice(0, 5);
-
-            var chartData = topCities.map(function (city) {
-                return { city: city, accidents: accidentCounts[city] };
+            // Chuyển đổi dữ liệu thành mảng các đối tượng {type, count}
+            var chartData = Object.keys(typeCounts).map(function(type) {
+                return { type: type, count: typeCounts[type] };
             });
 
-            var svgWidth = 1000;
-            var svgHeight = 600;
-            var margin = { top: 20, right: 20, bottom: 50, left: 70};
+            chartData.sort(function(a,b)
+            {
+                return b.count-a.count;
+            });
+            // Tạo biểu đồ
+            var svgWidth = 1000; // Đã thay đổi kích thước
+            var svgHeight = 500;
+            var margin = { top: 20, right: 20, bottom: 50, left: 70 };
             var width = svgWidth - margin.left - margin.right;
             var height = svgHeight - margin.top - margin.bottom;
 
-            var svg = d3.select("#chart-container")
+            var svg = d3.select("#chart")
                 .append("svg")
-                .attr("id", "chart") 
                 .attr("width", svgWidth)
                 .attr("height", svgHeight);
 
             var x = d3.scaleBand()
                 .range([0, width])
-                .padding(0.1);
+                .padding(0.1)
+                .domain(chartData.map(function(d) { return d.type; }));
 
             var y = d3.scaleLinear()
-                .range([height, 0]);
+                .range([height, 0])
+                .domain([0, d3.max(chartData, function(d) { return d.count; })]);
 
             var g = svg.append("g")
                 .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-            x.domain(chartData.map(function (d) { return d.city; }));
-            y.domain([0, d3.max(chartData, function (d) { return d.accidents; })]);
 
             g.selectAll(".bar")
                 .data(chartData)
                 .enter().append("rect")
                 .attr("class", "bar")
-                .attr("x", function (d) { return x(d.city); })
-                .attr("y", function (d) { return y(d.accidents); })
+                .attr("x", function(d) { return x(d.type); })
+                .attr("y", function(d) { return y(d.count); })
                 .attr("width", x.bandwidth())
-                .attr("height", function (d) { return height - y(d.accidents); });
+                .attr("height", function(d) { return height - y(d.count); })
+                .append("title") // Chú thích cho cột
+                .text(function(d) { return d.count; });
 
             g.append("g")
+                .attr("class", "x-axis")
                 .attr("transform", "translate(0," + height + ")")
                 .call(d3.axisBottom(x));
 
             g.append("g")
-                .call(d3.axisLeft(y).ticks(10));
+                .attr("class", "y-axis")
+                .call(d3.axisLeft(y));
 
+            // Thêm nhãn cho trục x
             svg.append("text")
                 .attr("transform", "translate(" + (width / 2) + " ," + (height + margin.top + 40) + ")")
                 .style("text-anchor", "middle")
                 .style("font-weight", "bold")
-                .text("Thành phố");
+                .text("Loại Nghệ Thuật");
 
+            // Thêm nhãn cho trục y
             svg.append("text")
                 .attr("transform", "rotate(-90)")
                 .attr("y", 0 - margin.left)
                 .attr("x", 0 - (height / 2))
                 .attr("dy", "5em")
-                .style("text-anchor", "middle")
                 .style("font-weight", "bold")
-                .text("Số lượng vụ tai nạn");
-        }).catch(function (error) {
-            console.error("Error loading the data: " + error);
+                .style("text-anchor", "middle")
+                .text("Số Lượng Tác Phẩm");
         });
     </script>
 </body>
-
 </html>
